--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <link rel="stylesheet" type="text.css" href="css.css">
   </head>
   <body>
-    <video src="blob:https://www.youtube.com/2838f979-f64c-4538-a31e-3ee10dacd01e" controls autoplay loop>Video Not Supported</video>
+    <video src="blob:https://www.youtube.com/2838f979-f64c-4538-a31e-3ee10dacd01e" controls loop>Video Not Supported</video>
   </body>
 </html>
