--- a/index.html
+++ b/index.html
@@ -2,8 +2,20 @@
 <html>
   <head>
     <title>Rick Astley</title>
+    <style>
+      video {
+  position: relative;
+  margin: 0 auto;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+}
+    </style>
   </head>
   <body>
-    <video src="blob:https://www.youtube.com/2838f979-f64c-4538-a31e-3ee10dacd01e" controls loop>Video Not Supported</video>
+    <iframe width="420" height="315"
+src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1&loop=1&controls=0">
+</iframe>
   </body>
 </html>
