--- a/index.html
+++ b/index.html
@@ -4,12 +4,7 @@
     <title>Rick Astley</title>
     <style>
       video {
-  position: relative;
-  margin: 0 auto;
-  min-width: 100%;
-  min-height: 100%;
-  width: auto;
-  height: auto;
+  object-set: fill;
 }
     </style>
   </head>
