--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </style>
   </head>
   <body>
-    <iframe width="auto" height="auto"
+    <iframe width="1920" height="1080"
 src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1&loop=1&controls=0">
 </iframe>
   </body>
