--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <iframe width="1366" height="768"
-src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1&loop=1&controls=0">
+src=https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1&loop=1&controls=0&playlist=dQw4w9WgXcQ>
 </iframe>
    
   </body>
