--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rick Astley</title>
     <style>
       video {
@@ -9,7 +10,7 @@
     </style>
   </head>
   <body>
-    <iframe width="1366" height="768"
+    <iframe style="width:100%;"
 src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1">
 </iframe>
    
