--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </style>
   </head>
   <body>
-    <iframe style="width:100%;"
+    <iframe style="width:100%; height:auto;"
 src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1">
 </iframe>
    
