--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rick Astley</title>
     <style>
-      video {
-  object-set: fill;
+      iframe {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%; 
+    min-height: 100%;
 }
     </style>
   </head>
